--- a/assets/css/stylebuku.css
+++ b/assets/css/stylebuku.css
@@ -1,16 +1,16 @@
 body{
-    background: #eee;
+    background: #faf9f9;
     color: #333;
     font-family: sans-serif;
     font-size:15px;
    }
    #wrapper{
-    background: #fff;
+    background: #ececed;
     width: 1100px;
     margin: 20px auto;
    }
    #wrapper header{
-    background: #232323;
+    background: #040504;
     padding: 20px;
    }
    #wrapper header hgroup{
